# Amber

./: .gitmodules  CMakeLists.txt
Amberskies/: CMakeLists.txt
Amberskies/Dependencies/GLFW3/: CMakeLists.txt
Amberskies/Dependencies/spdlog/tests/: catch.hpp
Amberskies/Source/: Amberskies.h  Common.h  Test.cpp  Test.h
Amberskies/Source/Amberskies/Core/: Application.cpp  Application.h  Layer.h  LayerStack.cpp  Log.cpp  Log.h  Window.h
Amberskies/Source/Amberskies/Events/: Event.h
Amberskies/Source/Amberskies/Gui/: ImGuiLayer.cpp
Amberskies/Source/Platform/OpenGL/: OpenGLContext.h
Amberskies/Source/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt
Sandbox/Source/: Sandbox.cpp
